--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github: CIGMA-OE
 url: https://cigma-oe.github.io/
 name: CIGMA-OE
 description: Comite interno de ingeniería matematica
-twitter:
+facebook: cigmaoe
 calendar: https://agregar-el-calendario-aqui
 mailinglist: mailto:cigmaoe@gmail.com
 gravatar_url:
